# google-antigravity-codex

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  NOTICE.md  README.md  SECURITY.md  mcp_config.json  plugin.json  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: agy-compat.yml  ci.yml  release.yml
docs/: SOURCE_MAP.md  security.md
google_antigravity_codex/: __init__.py  account.py  agy_auth.py  antigravity_api.py  auth.py  chat.py  cli.py  client.py  compare.py  consent_cli.py  diff_review.py  doc_facts.py  grounding.py  image.py  io_util.py  mcp_server.py  model_prefs.py  models.py  network.py  oauth_login.py  paths.py  profiles.py  provider.py  quota.py  release.py  response.py  routing.py  security.py  session_prefs.py  writing.py
scripts/: build_plugin_bundle.py  check_release_version.py  google_antigravity_consent.py  google_antigravity_doctor.py  google_antigravity_login.py  google_antigravity_mcp.py  google_antigravity_model.py  google_antigravity_release.py  google_antigravity_write.py  verify_live_features.py
skills/antigravity-code-review/: SKILL.md
skills/antigravity-coding/: SKILL.md
skills/antigravity-doctor/: SKILL.md
skills/antigravity-image/: SKILL.md
skills/antigravity-login/: SKILL.md
skills/antigravity-model-picker/: SKILL.md
skills/antigravity-model-router/: SKILL.md
skills/antigravity-pair/: SKILL.md
skills/antigravity-profiles/: SKILL.md
skills/antigravity-research/: SKILL.md
skills/gemini-writing/: SKILL.md
skills/google-antigravity/: SKILL.md
skills/google-grounded-search/: SKILL.md
skills/release-copilot/: SKILL.md
tests/: conftest.py  test_agy_auth_provider.py  test_auth.py  test_bundle.py  test_chat_grounding_image.py  test_chat_multimodal_stream.py  test_cli.py  test_client.py  test_consent.py  test_doctor.py  test_mcp_server.py  test_mcp_stdio.py  test_model_prefs.py  test_new_features.py  test_oauth_login.py  test_quality_hardening.py  test_quota.py  test_release_version.py  test_routing_response.py  test_security_network_models.py  test_stream_api.py  test_writing_release.py
