[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-antigravity-codex"
version = "0.9.8"
description = "Independent Codex plugin and MCP tools for Google Antigravity."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Park Chanwoo" }]
dependencies = []

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8", "pytest-cov>=5", "ruff>=0.12"]

[project.scripts]
google-antigravity-mcp = "google_antigravity_codex.mcp_server:serve"
google-antigravity-consent = "google_antigravity_codex.consent_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["google_antigravity_codex"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["google_antigravity_codex*"]
exclude = ["skills*", "tests*", "docs*", "scripts*"]
